tests/fixtures/flow/mermaid/positive/graph_tb_shorthand.mmd
graph TB
A & B --> C & D
