tests/fixtures/flow/mermaid/negative/unclosed_edge_label.mmd
flowchart TD
A -->|unterminated
B
